# img-filter

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
bench/: bench_run.cpp
examples/: cv_guided.cpp  load_image.cpp
include/: img_filters.hpp
include/img_filters/: fastguidedfilter.hpp  helper.hpp  realsense_filters.hpp  spatial_filter.hpp
include/img_filters/rs/: disparity_transform.hpp  spatial_filter.hpp
scripts/: realsense_details.py  view_image.py
src/: fastguidedfilter.cpp  helper.cpp  realsense_filters.cpp  spatial_filter.cpp
